# farcri-rs

./: Cargo.toml  README.md  build.rs
example/: Cargo.toml
example/benches/: sort.rs
src/: cargo.rs  driver.rs  lib.rs  macros.rs
src/bencher/: analysis.rs  bencher.rs  bid.rs  func.rs  measurement.rs  mod.rs  protocol.rs  proxylink.rs  time.rs
src/proxy/: ccfront.rs  dumbfront.rs  formatter.rs  mod.rs  targetlink.rs
src/proxy/ccfront/: ccprotocol.rs
src/proxy/targetlink/: slip.rs
src/proxy/targets/: ldscript.rs  mod.rs  probe_rs.rs
src/utils/: fmt.rs  futures.rs  stdserde.rs  strs.rs
